[metadata]
name = dul
version = 0.1.0
author = Daniil Trishkin
description = Dagger Utilities Library
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
* = scripts/**/*
